# obsidian-dataview-switcher

./: Cargo.toml  README.md
src/: main.rs
test-resources/: test.md
