[package]
name = "obsidian-dataview-switcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-walkdir = "2.0.0"
clap = { version = "4.5.21", features = ["derive"] }
futures-lite = "2.5.0"
regex = "1.11.1"
tokio = { version = "1.41.1", features = ["full", "macros", "rt-multi-thread"] }

[dev-dependencies]
assert_matches = "1.5.0"
